@@ -1,4 +1,4 @@
-/*  MiniWebSvr - A small webserver
+/*  MiniWebsvr - A small webserver
     Copyright (C) 2007  Daniel John Walker and Nickolas Antonie Grigoriadis
     E-Mail: djwalker at users.sourceforge.net and grigi_ at users.sourceforge.net
 
